--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -2,15 +2,8 @@
   "name": "y",
   "version": "1.0.0",
   "description": "ocr pdf",
-  "main": "lib/index.js",
-  "module": "./lib/index.js",
-  "files": [
-    "lib/"
-  ],
-  "type": "module",
-  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "cross-env NODE_ENV=test ts-node --esm ./test.ts"
+    "test": "cross-env NODE_ENV=test ts-node ./test.ts"
   },
   "keywords": [
     "ocr",
@@ -20,7 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^7.0.3",
-    "pdf-poppler": "^0.2.1",
+    "dotenv": "^16.3.1",
+    "node-poppler": "^7.1.0",
+    "openai": "^4.24.7"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
